# Deepstream-YOLOv8-Pose-With-Tracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  note.md  output.h  v8_pose_bytetrack_RTSPfile.cpp  v8_pose_bytetrack_sinkfile.cpp
configs/: ByteTrack_config.txt  config_nvdsanalytics.txt  config_tracker.txt  config_tracker_NvDCF_perf.yml  config_tracker_NvDeepSORT.yml  dstest1_pgie_YOLOv8-Pose_config.txt  server_tracker_config.txt  tracker_config.txt
